# Intro-to-Dawn

./: .gitignore  1-basicSlurm.sh  2-errorInCode.sh  3-timeout.sh  4-changeName.sh  5-alterLogNames.sh  README.md  SlurmUserInfo.sh.txt  change_details.sh  dawn.sbatch  exampleSlurmScript.sh  remove_details.sh  remove_slurm_files.sh  test.sh
Extra-VsCodeOnDawn/: VSCode_onDAWN.pptx
Part1-Slurm_and_Interactive_Jobs/Examples/: 1-basicSlurm.sh  2-errorInCode.sh  3-timeout.sh  4-changeName.sh  5-alterLogNames.sh  SlurmSignal.sh  dawn.sbatch  exampleSlurmScript.sh  hello.py  remove_slurm_files.sh
Part1-Slurm_and_Interactive_Jobs/Examples/Pytorch-task/: pytorch-job.sh  pytorch_gpu.py
Part1-Slurm_and_Interactive_Jobs/Examples/SlurmArrayJobs/: 1-arrayJob.sh  2-arrayJobConfig.sh
Part1-Slurm_and_Interactive_Jobs/Examples/dependancy_example/: 1.0_buildrun.sh  2.1_build_INTEL-xpu-smi.sbatch  2.2_run_INTEL-xpu-smi.sbatch  3.0_clean.sh  INTEL-xpu-smi.def
Part1-Slurm_and_Interactive_Jobs/Slides/: SLURMonDAWN.pptx
Part2-OndemandDawn/: Links.md
Part3-PythonEnvironments/Examples/: 1-basicEnv.sh  2-PytorchGPU.sh  3-pytorchenv2.8.sh  4-miniconda-install.sh  5-UV-Install.sh  6-TensorflowGPU.sh  6-tensorflowenv.sh  7-tensorflowenv.sh  env-jax.sh  install_miniconda.sh  ipex_test.py  itex_test.py  pyproject.toml  set_cache_projectfolder.sh  tf_testing.py  torchwrapper.sh  vscode_server.sh
Part3-PythonEnvironments/Slides/: PyEnvs_onDAWN.pptx
Part4-Apptainer/Example/: Example1.sh  Example2.sh
Part4-Apptainer/Example/1_Apptainer_Example/: 1.0_buildrun.sh  2.1_build_ApptainerEx.sbatch  2.2_run_ApptainerEx.sbatch  3.0_clean.sh  ApptainerEx.def
Part4-Apptainer/Example/2_Apptainer_Python/: 1.0_buildrun.sh  2.1_build_HelloWorld-Py.sbatch  2.2_run_HelloWorld-Py.sbatch  3.0_clean.sh  HelloWorld-Py.def  perf_sample.py  requirements.txt
Part4-Apptainer/Example/3_Pytorch-WandB/: 1.0_buildrun.sh  2.1_build_INTEL-WandB.sbatch  2.2_run_INTEL-WandB.sbatch  3.0_clean.sh  INTEL-WandB.def  test_wandb2.py
Part4-Apptainer/Example/3_Pytorch-WandB/Appt_folders/: README.md  pyproject.toml  requirements.txt  test_wand.py  wandb_login.py
Part4-Apptainer/Example/4_MPI-HelloWorld/: 1.0_buildrun.sh  2.1_build_MPI-hybrid.sbatch  2.2_run_MPI-hybrid.sbatch  3.0_clean.sh  MPI-hybrid.def
Part4-Apptainer/Example/4_MPI-HelloWorld/mpi_c_test/: makefile  mpi4py_pytorch.py  mpi4pytest1.py  mpi4pytest2.py  mpi_hello_world.c
Part4-Apptainer/Example/5_dawn-containers/: 1.0_build_image.sh  go_apptainer.sh
Part4-Apptainer/Example/6_Tensorflow-Inprogress/: 1.0_build_image.sh  go_apptainer.sh
Part4-Apptainer/slides/: Apptainer_onDAWN.pptx
Pytorch-task/: pytorch-job.sh
SlurmArrayJobs/: 2-arrayJobConfig.sh
dependancy_example/: 2.2_run_INTEL-xpu-smi.sbatch
