[project]
name = "Appt_WandB"
version = "0.1.0"
description = "UV Enironment to test Apptainter and WandB"
readme = "README.md"
authors = [
    { name = "hpc-support", email = "hpc-support@cam.ac.uk" }
]
requires-python = ">=3.11.0"
dependencies = [
    # Core dependencies
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    "loguru>=0.7.0",
    "ipykernel>=7.2.0",
    "dotenv>=0.9.9",
    "aioftp>=0.27.2",
    "aiohttp>=3.13.3",
    "WandB>=0.24",
]

[project.optional-dependencies]

# cpu = [
#     "torch>=2.9.1",
#     "torchvision>=0.24.1",
# ]
# cu128 = [
#     "torch>=2.9.1",
#     "torchvision>=0.24.1",
# ]

#rocm = [
#    "torch>=2.9.1",
#    "torchvision>=0.24.1",
#    "pytorch-triton-rocm>=3.5.1 ; sys_platform == 'linux'",
#    "transformers",
#    "accelerate",
#    "qwen-vl-utils[decord]",
#]

xpu = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",   
    "pytorch-triton-xpu>=3.5.0 ; sys_platform == 'linux'",  
     # Install transformers with the torch extra
    "transformers[torch] >=4.0,<4.3",
    "pytorch-triton-xpu>=3.3.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
    "accelerate",
    "qwen-vl-utils[decord]",
]

[tool.uv.sources]

torch = [
    # { index = "pytorch-cpu", extra = "cpu" },
    # { index = "pytorch-cu128", extra = "cu128" },
    # { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu", marker = "sys_platform == 'linux'" },

]

torchvision = [
    # { index = "pytorch-cpu", extra = "cpu" },
    # { index = "pytorch-cu128", extra = "cu128"},
    # { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu", marker = "sys_platform == 'linux'" },
]

#pytorch-triton-rocm = [
#    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
#]

pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]


# Vision-Language Models (VLMs) - requires GPU
# vlm = [
#     "torch>=2.1.0",
#     "torchvision>=0.16.0",
#     "transformers>=4.45.0",
#     "accelerate>=0.25.0",
#     "qwen-vl-utils[decord]>=0.0.8",
#     "flash-attn>=2.5.0; platform_system == 'Linux'",
# ]

# Qwen2.5-VL specific
# qwen = [
#     "torch>=2.1.0",
#     "torchvision>=0.16.0",
#     "transformers>=4.45.0",
#     "accelerate>=0.25.0",
#     "qwen-vl-utils[decord]>=0.0.8",
# ]

# olmOCR - currently disabled due to torch 2.7+ requirement
# Install manually with: pip install olmocr torch>=2.7.0 when available
# olmocr = [
#     "torch>=2.7.0",
#     "torchvision>=0.18.0",
#     "transformers>=4.45.0",
#     "accelerate>=0.25.0",
#     "olmocr>=0.4.0",
# ]

# PaddleOCR-VL specific (uses PaddlePaddle) - Linux only
# paddleocr-vl = [
#     "paddlepaddle-gpu>=2.6.0; platform_system == 'Linux'",
#     "transformers>=4.45.0",
#     "einops>=0.7.0",
# ]

# All VLM models (excluding olmocr which requires torch 2.7+)
# all-vlm = [
#     "torch>=2.1.0",
#     "torchvision>=0.16.0",
#     "transformers>=4.45.0",
#     "accelerate>=0.25.0",
#     "qwen-vl-utils[decord]>=0.0.8",
#     "flash-attn>=2.5.0; platform_system == 'Linux'",
# ]

# Development dependencies
# dev = [
#     "ipykernel>=6.0.0",
#     "jinja2>=3.1.6",
#     "pre-commit>=4.5.1",
#     "pytest>=7.0.0",
#     "pytest-cov>=4.0.0",
#     "ruff>=0.1.0",
#     "mypy>=1.5.0",
#     "python-dotenv>=1.2.1",
#     "openpyxl>=3.1.5",
# ]

# Full installation (everything except GPU-specific packages)
# full = [
#     "torch>=2.1.0",
#     "torchvision>=0.16.0",
#     "transformers>=4.45.0",
#     "accelerate>=0.25.0",
#     "qwen-vl-utils[decord]>=0.0.8",
#     "ipykernel>=6.0.0",
#     "pytest>=7.0.0",
# ]

# flash-attn requires torch to build

# flash-attn needs torch available during build
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true

#[[tool.uv.index]]
#name = "pytorch-rocm"
#url = "https://download.pytorch.org/whl/rocm6.4"
#explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
